<resources>
    <string name="app_name">Shelfie - APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="ortext">OR</string>
    <string name="register">REGISTER</string>
    <string name="edit_profile">Edit profile</string>
    <string name="usernameArroba">/@mittensBooks</string>
    <string name="userbio">I love books about chess and apocalypse!</string>
    <string name="genre">Genre</string>
    <string name="favorite_genres">Favorite Genres</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="extend_time">Extend Time</string>
    <string name="review">Review</string>
    <string name="returntext">Return</string>
    <string name="books_read">books read</string>
    <string name="reviews">reviews</string>
    <string name="you_haven_t_read_anything_yet">You haven\'t read anything yet</string>
    <string name="any_loan_active_ngo_borrow_some_books">No loans active\nGo borrow some books!</string>
    <string name="you_haven_t_reviewed_any_book_yet">You haven\'t reviewed any book yet!</string>
</resources>