<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.CompleteRegisterFragment"
    android:background="@color/beigeBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/placeholder_IV"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="55dp"
        android:alpha="0.8"
        android:padding="7dp"
        android:src="@drawable/editarfoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/addPhoto_IV"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="55dp"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/username"
        android:textColor="@color/misteryLight"
        app:layout_constraintEnd_toEndOf="@id/addPhoto_IV"
        app:layout_constraintStart_toStartOf="@id/addPhoto_IV"
        app:layout_constraintTop_toBottomOf="@id/addPhoto_IV" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_ET"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/roundcorners"
        android:backgroundTint="@color/beigeBackground"
        android:hint="@string/name"
        android:textSize="15sp"
        android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
        app:boxStrokeColor="@color/goldButton"
        app:endIconDrawable="@drawable/edit_icon"
        app:endIconMode="custom"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addPhoto_IV">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorners"
            android:backgroundTint="@color/beigeBackground"
            android:inputType="textEmailAddress"
            android:padding="5dip"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_ET"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundcorners"
        android:backgroundTint="@color/beigeBackground"
        android:hint="@string/email"
        android:textSize="15sp"
        android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
        app:boxStrokeColor="@color/goldButton"
        app:endIconDrawable="@drawable/edit_icon"
        app:endIconMode="custom"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_ET">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorners"
            android:backgroundTint="@color/beigeBackground"
            android:inputType="text"
            android:padding="5dip"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bio_ET"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundcorners"
        android:backgroundTint="@color/beigeBackground"
        android:hint="@string/bio"
        android:textSize="15sp"
        android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
        app:boxStrokeColor="@color/goldButton"
        app:endIconDrawable="@drawable/edit_icon"
        app:endIconMode="custom"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_ET">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorners"
            android:backgroundTint="@color/beigeBackground"
            android:inputType="text"
            android:padding="5dip"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/continue_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:src="@drawable/checkmark_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bio_ET"
        app:layout_constraintVertical_bias="0.934" />



</androidx.constraintlayout.widget.ConstraintLayout>