<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beigeBackground"
    tools:context=".view.UserProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilepic"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="35dp"
        android:padding="7dp"
        android:src="@drawable/mittens2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="75dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/roundcorners"
        android:backgroundTint="@color/goldButton"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textSize="7sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="Mittens"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepic" />

    <TextView
        android:id="@+id/usernameArroba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameArroba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameText" />

    <TextView
        android:id="@+id/userBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/userbio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameArroba" />

    <TextView
        android:id="@+id/userBooksCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="240"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userBio" />

    <!-- <TextView
        android:id="@+id/favGenres_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_genres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userBooksCounter" /> -->


    <com.google.android.material.tabs.TabLayout
        android:layout_marginTop="5dp"
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beigeBackgroundEditText"
        app:layout_constraintBottom_toTopOf="@id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userBooksCounter"
        app:tabTextColor="@color/white" >


    </com.google.android.material.tabs.TabLayout>



    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"/>




    <!-- <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:src="@drawable/black_user"
         app:civ_border_overlay="true"
         app:civ_border_width="2dp"
         app:civ_border_color="@color/purple_200"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
        />
 -->
</androidx.constraintlayout.widget.ConstraintLayout>