<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beigeBackground"
    tools:context=".view.SignUpFragment">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:src="@drawable/shelfie_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/username_ET"
        app:layout_constraintStart_toStartOf="@id/username_ET" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_ET"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/roundcorners"
        android:backgroundTint="@color/beigeBackgroundEditText"
        app:errorEnabled="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:boxStrokeColor="@color/goldButton"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:startIconDrawable="@drawable/icon_user"
        android:theme="@style/ThemeOverlay.TextInputLayout.TextView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:background="@drawable/roundcorners"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:backgroundTint="@color/beigeBackgroundEditText"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="7dp"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/password_ET"
        app:layout_constraintStart_toStartOf="@id/password_ET"
        app:layout_constraintTop_toBottomOf="@id/username_ET" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_ET"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundcorners"
        android:backgroundTint="@color/beigeBackgroundEditText"
        android:textSize="15sp"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:startIconDrawable="@drawable/icon_lock"
        app:boxStrokeColor="@color/goldButton"
        app:layout_constraintTop_toBottomOf="@id/password_TV"
        android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="@drawable/roundcorners"
            android:backgroundTint="@color/beigeBackgroundEditText"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/repeatPassword_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="7dp"
        android:text="@string/repeat_password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/repeatPassword_ET"
        app:layout_constraintStart_toStartOf="@id/repeatPassword_ET"
        app:layout_constraintTop_toBottomOf="@id/password_ET" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/repeatPassword_ET"
        android:layout_width="225dp"
        app:errorEnabled="false"
        android:layout_height="wrap_content"
        android:background="@drawable/roundcorners"
        android:backgroundTint="@color/beigeBackgroundEditText"
        app:startIconDrawable="@drawable/icon_lock"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/goldButton"
        android:theme="@style/ThemeOverlay.TextInputLayout.TextView"
        app:layout_constraintTop_toBottomOf="@id/repeatPassword_TV">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:padding="5dip"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorners"
            android:backgroundTint="@color/beigeBackgroundEditText"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/register_button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="#352315"
        android:padding="10dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatPassword_ET" />
    <!--
       <com.google.android.material.textfield.TextInputLayout


           >

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:backgroundTint="@color/beigeFondoEditText"
               android:inputType="textEmailAddress"
               />
       </com.google.android.material.textfield.TextInputLayout>
   -->

</androidx.constraintlayout.widget.ConstraintLayout>